apps/project0-backend/deployment/k8s/resources/ingress-service-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: prometheus-operator
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /grafana
spec:
  rules:
  - http:
      paths:
        - path: /grafana
          backend:
            serviceName: prometheus-operator-grafana
            servicePort: 80
