apps/project0-backend/deployment/k8s/resources/ingress-service-linkerdweb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-linkerd-web
  annotations:
    ingress.kubernetes.io/rewrite-target: /linkerd-web
    ingress.nginx.ingress.kubernetes.io/app-root: /linkerd-web
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: web-ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: linkerd-web
            servicePort: 8084
